[tool.poetry]
name = "Dank Memer Self Bot"
version = "0.1.0"
description = ""
authors = ["thr#8159"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.0.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
